--- a/BeezNest/Views/Shared/_AdminLayout .cshtml
+++ b/BeezNest/Views/Shared/_AdminLayout .cshtml
@@ -6,18 +6,14 @@
     <title>@ViewData["Title"] - BeezNest</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
+    @* <link href="~/css/site.css" rel="stylesheet" type="text/css" /> *@
 
-     
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
-                    <span><i class="fa-solid fa-bars"></i></span>
-                </button>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BeezNest</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -35,39 +31,25 @@
                 </div>
             </div>
         </nav>
-
-
-        <div class="sidebar">
-            <div class="offcanvas offcanvas-start" id="demo">
-                <div class="offcanvas-header">
-
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <a class="active" href="#home">Home</a>
-                    <a href="#news">News</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#about">About</a>
-                </div>
-            </div>
-
-        </div>
     </header>
+    <div class="sidebar">
+        @* This is a side bar test *@
 
 
-    
-    <div class="container" >
-        <main role="main" class="pb-3" style="min-height:550px;">
+
+
+    </div>
+    <div class="container">
+        <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted mt-5">
         <div class="container">
             &copy; 2024 - BeezNest - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
