--- a/BeezNest/Views/Admin/DeleteProduct.cshtml
+++ b/BeezNest/Views/Admin/DeleteProduct.cshtml
@@ -16,7 +16,7 @@
                         <label class="col-md-4 col-form-label">Upload Images</label>
                         <div class="col-md-8">
 
-                            <input type="file" class="form-control w-100" accept="image/*" asp-for="ProductImages" multiple />
+                            <input type="file" disabled class="form-control w-100" accept="image/*" asp-for="ProductImages" multiple />
                         </div>
                     </div>
 
@@ -24,7 +24,7 @@
                         <label class="col-md-4 col-form-label">Product/Model</label>
                         <div class="col-md-8">
 
-                            <input type="text" class="form-control w-100" asp-for="ProductsModel" placeholder="Enter Product/model" />
+                            <input type="text" disabled class="form-control w-100" asp-for="ProductsModel" placeholder="Enter Product/model" />
                         </div>
                     </div>
 
@@ -32,7 +32,7 @@
                         <label class="col-md-4 col-form-label">Specifications</label>
                         <div class="col-md-8">
 
-                            <input type="text" class="form-control w-100" asp-for="Specifications" placeholder="Enter specifications" />
+                            <input type="text" disabled class="form-control w-100" asp-for="Specifications" placeholder="Enter specifications" />
                         </div>
                     </div>
 
@@ -40,7 +40,7 @@
                         <label class="col-md-4 col-form-label">Price</label>
                         <div class="col-md-8">
 
-                            <input type="number" class="form-control w-100" asp-for="Price" placeholder="Enter price" />
+                            <input type="number" disabled class="form-control w-100" asp-for="Price" placeholder="Enter price" />
                         </div>
                     </div>
 
@@ -48,7 +48,7 @@
                         <label class="col-md-4 col-form-label">Number of Items</label>
                         <div class="col-md-8">
 
-                            <input type="number" class="form-control w-100" asp-for="NumberOfItem" placeholder="Enter number of items" />
+                            <input type="number" disabled class="form-control w-100" asp-for="NumberOfItem" placeholder="Enter number of items" />
                         </div>
                     </div>
 
@@ -56,7 +56,7 @@
                         <label class="col-md-4 col-form-label">Available Colors</label>
                         <div class="col-md-8">
 
-                            <input type="text" class="form-control w-100" asp-for="Colors" placeholder="Enter colors separated by commas (e.g., Red, Blue, Green)" />
+                            <input type="text" disabled class="form-control w-100" asp-for="Colors" placeholder="Enter colors separated by commas (e.g., Red, Blue, Green)" />
                         </div>
                     </div>
 
