--- a/BeezNest/Views/Admin/EditProduct.cshtml
+++ b/BeezNest/Views/Admin/EditProduct.cshtml
@@ -5,7 +5,7 @@
 
 <div class=" mt-5">
 
-    <form method="post" asp-action="CreateProduct" enctype="multipart/form-data">
+    <form method="post" asp-action="EditProduct" enctype="multipart/form-data">
         <div class="centered-card mt-5">
             <div class="card">
                 <div class="card-body">
