--- a/BeezNest/Views/Home/SearchResults.cshtml
+++ b/BeezNest/Views/Home/SearchResults.cshtml
@@ -5,11 +5,11 @@
     ViewData["Title"] = "Search Products";
 }
 
-<h2 class="text-center">Search Results</h2>
+<h2 style="margin-top:120px;" class=" text-center">Search Results</h2>
 
 @if (!Model.Any())
 {
-    <p>No products found.</p>
+    <h5 style="margin-top:100px;" class="my-5 text-center">No products found!!! <br />search product by name</h5>
 }
 else
 {
